--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="IMG-20250113-WA0022.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/Images/IMG-20250113-WA0022.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></link>
 </head>
 <body>
     <div class="cal">
-        <div class="container col-lg-6 col-10 mx-auto p-lg-4 p-2 shadow-sm" id="bg">
+        <div class="container col-lg-6 col-10 mx-auto p-lg-4 p-2 shadow-sm rounded-4" id="bg">
             <h1 class="text-center my-3 text-decoration-underline" >Ben10 Simple Calculator</h1>
             <input type="number" class="form-control shadow-none my-3" placeholder="First Number" id="firstNumber" autofocus>
             <input type="number" class="form-control shadow-none my-3" placeholder="Second Number" id="secondNumber">
             <div class="d-flex justify-content-center">
-            <button onclick="multiply()" class="btn btn-success my-2 mx-2">Multiply</button>
-            <button onclick="add()" class="btn btn-primary my-2 mx-2">Add</button>
-            <button onclick="subtract()" class="btn btn-danger my-2 mx-2">Subtract</button>
-            <button onclick="divide()" class="btn btn-info my-2 mx-2">Divide</button>
+            <button onclick="multiply()" class="btn btn-success my-2 mx-1">Multiply</button>
+            <button onclick="add()" class="btn btn-primary my-2 mx-1">Add</button>
+            <button onclick="subtract()" class="btn btn-danger my-2 mx-1">Subtract</button>
+            <button onclick="divide()" class="btn btn-info my-2 mx-1">Divide</button>
             </div>
             <div id="ans" class="text-center "><h2>Answer</h2></div>
         </div>
